logs/django.log
ERROR 2026-01-13 16:18:54,094 log Internal Server Error: /articles/
Traceback (most recent call last):
  File "D:\project\venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "D:\project\venv\Lib\site-packages\django\core\handlers\base.py", line 198, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "D:\project\venv\Lib\site-packages\django\utils\decorators.py", line 192, in _view_wrapper
    result = _process_exception(request, e)
  File "D:\project\venv\Lib\site-packages\django\utils\decorators.py", line 190, in _view_wrapper
    response = view_func(request, *args, **kwargs)
  File "D:\project\venv\Lib\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "D:\project\articles\views.py", line 50, in article_list
    return render(request, 'articles/list.html', {
        'articles': page_obj,
        'page_obj': page_obj,
        'per_page': per_page,
    })
  File "D:\project\venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "D:\project\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "D:\project\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\project\venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\project\venv\Lib\site-packages\django\template\engine.py", line 186, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "D:\project\venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "D:\project\venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "D:\project\venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 157, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 199, in compile_nodelist
    nodelist = parser.parse()
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "D:\project\venv\Lib\site-packages\django\template\loader_tags.py", line 307, in do_extends
    nodelist = parser.parse()
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "D:\project\venv\Lib\site-packages\django\template\loader_tags.py", line 235, in do_block
    nodelist = parser.parse(("endblock",))
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 585, in parse
    raise self.error(token, e)
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 583, in parse
    compiled_result = compile_func(self, token)
  File "D:\project\venv\Lib\site-packages\django\template\defaulttags.py", line 893, in do_for
    sequence = parser.compile_filter(bits[in_index + 1])
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 676, in compile_filter
    return FilterExpression(token, self)
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 771, in __init__
    filter_func = parser.find_filter(filter_name)
  File "D:\project\venv\Lib\site-packages\django\template\base.py", line 682, in find_filter
    raise TemplateSyntaxError("Invalid filter: '%s'" % filter_name)
django.template.exceptions.TemplateSyntaxError: Template: D:\project\templates\articles\list.html, Invalid filter: 'split'
WARNING 2026-01-13 16:24:05,406 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:24:24,981 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:25:16,323 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:25:16,781 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:25:16,931 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:25:45,480 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
WARNING 2026-01-13 16:25:48,177 log Not Found: /.well-known/appspecific/com.chrome.devtools.json
